# dnswip

./: README.md  pyproject.toml
misc/: bitwise01.py  bitwise02.py
src/: main.py
