[tool.poetry]
name = "dnswip"
version = "0.1.0"
description = "DNSWIP is a Domain Name Server Written In Python."
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
